<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_centerVertical="true"
            android:padding="20dp"
            android:src="@drawable/ic_left"
            app:tint="@color/colorAccent"></ImageView>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="56dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:paddingTop="4dp"
            android:textColor="@color/colorText"
            android:textSize="18sp"></TextView>

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/colorCard"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/assistant"
                        android:textSize="18sp"
                        android:fontFamily="@font/poppins"
                        android:layout_margin="16dp"
                        android:textColor="@color/colorText"></TextView>


                    <EditText
                        android:id="@+id/question"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/et_bg"
                        android:backgroundTint="@color/colorBG"
                        android:layout_marginLeft="16dp"
                        android:textColor="@color/colorText"
                        android:textColorHint="@color/colorTextSecondary"
                        android:gravity="start"
                        android:padding="10dp"
                        android:textSize="14sp"
                        android:hint="@string/enter_your_text"
                        android:layout_marginRight="16dp"
                        android:minHeight="200dp"></EditText>


                    <androidx.cardview.widget.CardView
                        android:id="@+id/start"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        app:cardCornerRadius="60dp"
                        android:layout_margin="16dp"
                        app:cardBackgroundColor="@color/colorAccent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/start"
                            android:textSize="18sp"
                            android:layout_gravity="center"
                            android:textColor="@color/colorText"></TextView>


                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/resultCard"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@color/colorCard"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/result_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/result"
                        android:textSize="18sp"
                        android:layout_margin="16dp"
                        android:textColor="@color/colorText"></TextView>


                    <EditText
                        android:id="@+id/result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/et_bg"
                        android:backgroundTint="@color/colorBG"
                        android:layout_marginLeft="16dp"
                        android:textColor="@color/colorText"
                        android:textColorHint="@color/colorTextSecondary"
                        android:gravity="start"
                        android:padding="10dp"
                        android:textSize="14sp"
                        android:hint="@string/your_result_will_be_displayed_here"
                        android:layout_marginRight="16dp"
                        android:minHeight="200dp"></EditText>


                    <LinearLayout
                        android:id="@+id/copy"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/et_border_bg"
                        app:cardCornerRadius="60dp"
                        android:gravity="center"
                        android:layout_margin="16dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_copy"
                                app:tint="@color/colorAccent"></ImageView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/copy"
                                android:textSize="18sp"
                                android:layout_marginLeft="8dp"
                                android:textColor="@color/colorAccent"></TextView>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>