<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    tools:context=".activity.AboutUsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_centerVertical="true"
            android:padding="20dp"
            android:src="@drawable/ic_left"
            app:tint="@color/colorAccent"></ImageView>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="56dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:paddingTop="4dp"
            android:text="About"
            android:textColor="@color/colorText"
            android:textSize="18sp"></TextView>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="76dp"
        android:layout_marginRight="24dp"
        app:cardBackgroundColor="@color/colorCard"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginTop="10dp"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:textColor="@color/colorText"
                android:textSize="12sp"
                android:fontFamily="@font/poppins"></TextView>

            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="4"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/facebook"
                    android:layout_weight="1"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/facebook"></ImageView>


                <ImageView
                    android:id="@+id/twitter"
                    android:layout_weight="1"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/twitter"></ImageView>

                <ImageView
                    android:id="@+id/linkdin"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/linkedin"></ImageView>

                <ImageView
                    android:id="@+id/whatsapp"
                    android:layout_weight="1"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/whatsapp"></ImageView>

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:textColor="@color/colorText"
                android:textSize="12sp"
                android:justificationMode="inter_word"
                android:fontFamily="@font/poppins"
                android:layout_marginTop="24dp"></TextView>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>