<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    tools:context=".activity.SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_centerVertical="true"
            android:padding="20dp"
            android:src="@drawable/ic_left"
            app:tint="@color/colorAccent"></ImageView>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="56dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:paddingTop="4dp"
            android:text="@string/settings"
            android:textColor="@color/colorText"
            android:textSize="18sp"></TextView>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:layout_marginTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/subscription"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="36dp"
                app:cardBackgroundColor="@color/colorCard"
                app:cardCornerRadius="8dp">

                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remove_ads_subscription"
                        android:textColor="@color/colorText"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="14sp"
                        android:paddingTop="2dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="24dp"></TextView>

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical|right"
                        android:layout_marginRight="24dp"
                        android:src="@drawable/remove_ads"></ImageView>

                </androidx.coordinatorlayout.widget.CoordinatorLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/website"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@color/colorCard"
                app:cardCornerRadius="8dp">

                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/website"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="14sp"
                        android:paddingTop="2dp"
                        android:textColor="@color/colorText"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="24dp"></TextView>

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center_vertical|right"
                        android:layout_marginRight="24dp"
                        android:src="@drawable/website"></ImageView>

                </androidx.coordinatorlayout.widget.CoordinatorLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/about_us"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@color/colorCard"
                app:cardCornerRadius="8dp">

                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about"
                        android:paddingTop="2dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="14sp"
                        android:textColor="@color/colorText"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="24dp"></TextView>

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical|right"
                        android:layout_marginRight="24dp"
                        android:src="@drawable/about_us"></ImageView>

                </androidx.coordinatorlayout.widget.CoordinatorLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/logout"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@color/colorCard"
                app:cardCornerRadius="8dp">

                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Log Out"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="14sp"
                        android:paddingTop="2dp"
                        android:textColor="@color/colorText"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="24dp"></TextView>

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical|right"
                        android:layout_marginRight="24dp"
                        android:src="@drawable/logout"></ImageView>

                </androidx.coordinatorlayout.widget.CoordinatorLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>