<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:src="@drawable/logo"></ImageView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:paddingTop="4dp"
                    android:text="@string/app_name"
                    android:textColor="@color/colorText"
                    android:textSize="18sp"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="-4dp"
                    android:fontFamily="@font/poppins"
                    android:paddingTop="4dp"
                    android:text="@string/title_desc"
                    android:textColor="@color/colorText"
                    android:textSize="10sp"></TextView>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/website"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:layout_centerVertical="true"
                android:src="@drawable/website"></ImageView>

            <ImageView
                android:id="@+id/about_us"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:layout_gravity="center"
                android:layout_centerVertical="true"
                android:src="@drawable/about_us"></ImageView>

            <ImageView
                android:id="@+id/settings"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:layout_gravity="center"
                android:layout_centerVertical="true"
                android:src="@drawable/settings"></ImageView>

        </LinearLayout>



    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:layout_marginTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/imageSlider"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginTop="16dp"
                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderAutoCycleEnabled="true"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorMargin="16dp"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="2dp"
                app:sliderIndicatorRadius="1.5dp"
                app:sliderIndicatorSelectedColor="@color/colorWhite"
                app:sliderIndicatorUnselectedColor="@color/colorGray"
                app:sliderScrollTimeInSec="1"
                app:sliderStartAutoCycle="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginLeft="16dp"
                android:paddingTop="4dp"
                android:text="@string/select_a_service"
                android:textColor="@color/colorText"
                android:textSize="18sp"></TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="60dp"
                android:fillViewport="true"
                android:nestedScrollingEnabled="false"></androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
